--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			</p>
       <h3>Todo</h3>
 			<ul id="incompletetasks">
-				<li><input type="checkbox">
+				<li>
+					<input type="checkbox">
 					<label class="task">Pay Bills</label>
 					<input 
 					  type="text" 
