--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="aaa">
 			<img src="./eisenhower-matrix.jpg">
 			<a 
-			  class="more_inf" 
+			  class="more-inf" 
 				href="https://goal-life.com/page/method/matrix-eisenhower"
 			>
 			Want more details?</a>
@@ -27,7 +27,7 @@
 				<div class="task-row-wrapper">
 					<input 
 					  id="new-task" 
-						class="task" 
+						class="task-element" 
 						type="text"
 					>
 					<button>Add</button>
@@ -37,24 +37,24 @@
 			<ul id="incompletetasks">
 				<li>
 					<input type="checkbox">
-					<label class="task">Pay Bills</label>
+					<label class="task-element">Pay Bills</label>
 					<input 
 					  type="text" 
-						class="task"
+						class="task-element"
 					>
-					<button class="edit">Edit</button>
-					<button class="delete"><img src="./remove.svg"></button>
+					<button class="task-edit">Edit</button>
+					<button class="task-delete"><img src="./remove.svg"></button>
 				</li>
-				<li class="editmode">
+				<li class="edit-mode">
 					<input type="checkbox">
-					<label class="task">Go Shopping</label>
+					<label class="task-element">Go Shopping</label>
 					<input 
 					  type="text" 
 						value="Go Shopping" 
-						class="task"
+						class="task-element"
 					>
-					<button class="edit">Save</button>
-					<button class="delete"><img src="./remove.svg"></button>
+					<button class="task-edit">Save</button>
+					<button class="task-delete"><img src="./remove.svg"></button>
 				</li>
       </ul>
 			<h3>Completed</h3>
@@ -64,13 +64,13 @@
 					  type="checkbox" 
 						checked
 					>
-					<label class="task">See the Doctor</label>
+					<label class="task-element">See the Doctor</label>
 					<input 
 					  type="text" 
-						class="task"
+						class="task-element"
 					>
-					<button class="edit">Edit</button>
-					<button class="delete"><img src="./remove.svg"></button>
+					<button class="task-edit">Edit</button>
+					<button class="task-delete"><img src="./remove.svg"></button>
 				</li>
 			</ul>
     </div>
