--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			Want more details?</a>
 		</div>
 		<div class="centered-main-page-element">
-			<p id="topsectionforaddingelementtolist">
+			<p id="top-section-for-adding-element-to-list">
 				<label for="new-task">Add Item</label>
 				<div class="task-row-wrapper">
 					<input 
@@ -34,7 +34,7 @@
 				</div>
 			</p>
       <h3>Todo</h3>
-			<ul id="incompletetasks">
+			<ul id="incomplete-tasks">
 				<li>
 					<input type="checkbox">
 					<label class="task-element">Pay Bills</label>
