refactor(basic-3.2, basic-3.3): change names of identifiers and classes to meaningful and concise

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 		>
   </head>
 	<body>
-    <div class="aaa">
+    <div class="header">
 			<img src="./eisenhower-matrix.jpg">
 			<a 
-			  class="more-inf" 
+			  class="header-link" 
 				href="https://goal-life.com/page/method/matrix-eisenhower"
 			>
 			Want more details?</a>
 		</div>
-		<div class="centered-main-page-element">
-			<p id="top-section-for-adding-element-to-list">
+		<div class="main-page">
+			<p id="add-task">
 				<label for="new-task">Add Item</label>
-				<div class="task-row-wrapper">
+				<div class="task-wrapper">
 					<input 
 					  id="new-task" 
 						class="task-element" 
