--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			charset="utf-8"
 		>
   </head>
-	<body>
+	<body class="wrapper">
     <div class="header">
-			<img src="./eisenhower-matrix.jpg">
+			<img class="header-img" src="./eisenhower-matrix.jpg">
 			<a 
 			  class="header-link" 
 				href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -23,54 +23,55 @@
 		</div>
 		<div class="main-page">
 			<p id="add-task">
-				<label for="new-task">Add Item</label>
+				<h3 class="title title-add-task">Add Item</h3>
 				<div class="task-wrapper">
 					<input 
 					  id="new-task" 
-						class="task-element" 
+						class="new-task-element input" 
 						type="text"
 					>
-					<button>Add</button>
+					<button class="task-btn">Add</button>
 				</div>
 			</p>
-      <h3>Todo</h3>
+      <h3 class="title">Todo</h3>
 			<ul id="incomplete-tasks">
-				<li>
-					<input type="checkbox">
-					<label class="task-element">Pay Bills</label>
+				<li class="task__item">
+					<input class="input" type="checkbox">
+					<label class="task-label">Pay Bills</label>
 					<input 
 					  type="text" 
-						class="task-element"
+						class="task-element input"
 					>
-					<button class="task-edit">Edit</button>
-					<button class="task-delete"><img src="./remove.svg"></button>
+					<button class="task-btn task-edit">Edit</button>
+					<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
 				</li>
-				<li class="edit-mode">
-					<input type="checkbox">
-					<label class="task-element">Go Shopping</label>
+				<li class="task__item edit-mode">
+					<input class="input" type="checkbox">
+					<label class="task-label">Go Shopping</label>
 					<input 
 					  type="text" 
 						value="Go Shopping" 
-						class="task-element"
+						class="task-element input"
 					>
-					<button class="task-edit">Save</button>
-					<button class="task-delete"><img src="./remove.svg"></button>
+					<button class="task-btn task-edit">Save</button>
+					<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
 				</li>
       </ul>
-			<h3>Completed</h3>
+			<h3 class="title">Completed</h3>
 			<ul id="completed-tasks">
-				<li>
+				<li class="task__item">
 					<input 
 					  type="checkbox" 
 						checked
+						class="input-checkbox input"
 					>
-					<label class="task-element">See the Doctor</label>
+					<label class="task-label">See the Doctor</label>
 					<input 
 					  type="text" 
-						class="task-element"
+						class="task-element input"
 					>
-					<button class="task-edit">Edit</button>
-					<button class="task-delete"><img src="./remove.svg"></button>
+					<button class="task-btn task-edit">Edit</button>
+					<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
 				</li>
 			</ul>
     </div>
