refactor(extended-1.1): add semantics

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 		>
   </head>
 	<body class="wrapper">
-    <div class="header">
+    <header class="header">
 			<img class="header-img" src="./eisenhower-matrix.jpg">
 			<a 
 			  class="header-link" 
 				href="https://goal-life.com/page/method/matrix-eisenhower"
 			>
 			Want more details?</a>
-		</div>
-		<div class="main-page">
-			<p id="add-task">
+		</header>
+		<main class="main-page">
+			<section id="add-task">
 				<h3 class="title title-add-task">Add Item</h3>
 				<div class="task-wrapper">
 					<input 
@@ -32,49 +32,53 @@
 					>
 					<button class="task-btn">Add</button>
 				</div>
-			</p>
-      <h3 class="title">Todo</h3>
-			<ul id="incomplete-tasks">
-				<li class="task__item">
-					<input class="input" type="checkbox">
-					<label class="task-label">Pay Bills</label>
-					<input 
-					  type="text" 
-						class="task-element input"
-					>
-					<button class="task-btn task-edit">Edit</button>
-					<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
-				</li>
-				<li class="task__item edit-mode">
-					<input class="input" type="checkbox">
-					<label class="task-label">Go Shopping</label>
-					<input 
-					  type="text" 
-						value="Go Shopping" 
-						class="task-element input"
-					>
-					<button class="task-btn task-edit">Save</button>
-					<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
-				</li>
-      </ul>
-			<h3 class="title">Completed</h3>
-			<ul id="completed-tasks">
-				<li class="task__item">
-					<input 
-					  type="checkbox" 
-						checked
-						class="input-checkbox input"
-					>
-					<label class="task-label">See the Doctor</label>
-					<input 
-					  type="text" 
-						class="task-element input"
-					>
-					<button class="task-btn task-edit">Edit</button>
-					<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
-				</li>
-			</ul>
-    </div>
+			</section>
+			<section class="incomplete-tasks">
+				<h3 class="title">Todo</h3>
+				<ul id="incomplete-tasks">
+					<li class="task__item">
+						<input class="input" type="checkbox">
+						<label class="task-label">Pay Bills</label>
+						<input 
+							type="text" 
+							class="task-element input"
+						>
+						<button class="task-btn task-edit">Edit</button>
+						<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
+					</li>
+					<li class="task__item edit-mode">
+						<input class="input" type="checkbox">
+						<label class="task-label">Go Shopping</label>
+						<input 
+							type="text" 
+							value="Go Shopping" 
+							class="task-element input"
+						>
+						<button class="task-btn task-edit">Save</button>
+						<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
+					</li>
+				</ul>
+			</section>
+			<section class="completed-tasks">
+				<h3 class="title">Completed</h3>
+				<ul id="completed-tasks">
+					<li class="task__item">
+						<input 
+							type="checkbox" 
+							checked
+							class="input-checkbox input"
+						>
+						<label class="task-label">See the Doctor</label>
+						<input 
+							type="text" 
+							class="task-element input"
+						>
+						<button class="task-btn task-edit">Edit</button>
+						<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
+					</li>
+				</ul>
+			</section>
+    </main>
 		<script src="app.js"></script>
 	</body>
 </html>
