fix(extended-1.2): add alt attributes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 	<body class="wrapper">
     <header class="header">
-			<img class="header-img" src="./eisenhower-matrix.jpg">
+			<img class="header-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix image">
 			<a 
 			  class="header-link" 
 				href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -44,7 +44,7 @@
 							class="task-element input"
 						>
 						<button class="task-btn task-edit">Edit</button>
-						<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
+						<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg" alt="Delete button icon"></button>
 					</li>
 					<li class="task__item edit-mode">
 						<input class="input" type="checkbox">
@@ -55,7 +55,7 @@
 							class="task-element input"
 						>
 						<button class="task-btn task-edit">Save</button>
-						<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
+						<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg" alt="Delete button icon"></button>
 					</li>
 				</ul>
 			</section>
@@ -74,7 +74,7 @@
 							class="task-element input"
 						>
 						<button class="task-btn task-edit">Edit</button>
-						<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg"></button>
+						<button class="task-btn task-delete"><img class="task-delete-img" src="./remove.svg" alt="Delete button icon"></button>
 					</li>
 				</ul>
 			</section>
