--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			Want more details?</a>
 		</header>
 		<main class="main">
-			<section class="task_new">
+			<section class="task task_new">
 				<h3 class="task__title task__title_new">Add Item</h3>
 				<div class="task__wrapper_new">
 					<input
@@ -32,7 +32,7 @@
 					<button class="task__btn_new task__btn">Add</button>
 				</div>
 			</section>
-			<section class="task_incomplete">
+			<section class="task task_incomplete">
 				<h3 class="task__title">Todo</h3>
 				<ul class="task__list_incomplete">
 					<li class="task__item">
@@ -58,7 +58,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="task_completed">
+			<section class="task task_completed">
 				<h3 class="task__title">Completed</h3>
 				<ul class="task__list_completed">
 					<li class="task__item">
