--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<h3 class="task__title task__title_new">Add Item</h3>
 				<div class="task__wrapper_new">
 					<input
-						class="task__content_new input" 
+						class="task__content_new" 
 						type="text"
 					>
 					<button class="task__btn_new task__btn">Add</button>
@@ -36,22 +36,22 @@
 				<h3 class="task__title">Todo</h3>
 				<ul class="task__list_incomplete">
 					<li class="task__item">
-						<input class="task__check input" type="checkbox">
+						<input class="task__check" type="checkbox">
 						<label class="task__label">Pay Bills</label>
 						<input 
 							type="text" 
-							class="task__content input"
+							class="task__content"
 						>
 						<button class="task__btn task__btn_edit">Edit</button>
 						<button class="task__btn task__btn_delete"><img class="task__img_delete" src="./remove.svg" alt="Delete button icon"></button>
 					</li>
 					<li class="task__item task__item_edit-mode">
-						<input class="task__check input" type="checkbox">
+						<input class="task__check" type="checkbox">
 						<label class="task__label">Go Shopping</label>
 						<input 
 							type="text" 
 							value="Go Shopping" 
-							class="task__content input"
+							class="task__content"
 						>
 						<button class="task__btn task__btn_edit">Save</button>
 						<button class="task__btn task__btn_delete"><img class="task__img_delete" src="./remove.svg" alt="Delete button icon"></button>
@@ -65,12 +65,12 @@
 						<input 
 							type="checkbox" 
 							checked
-							class="task__check input"
+							class="task__check"
 						>
 						<label class="task__label">See the Doctor</label>
 						<input 
 							type="text" 
-							class="task__content input"
+							class="task__content"
 						>
 						<button class="task__btn task__btn_edit">Edit</button>
 						<button class="task__btn task__btn_delete"><img class="task__img_delete" src="./remove.svg" alt="Delete button icon"></button>
