refactor(basic-2.1): add a line break to button elements in HTML

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
               class="task__content"
             >
             <button class="task__btn task__btn_edit">Edit</button>
-            <button class="task__btn task__btn_delete"><img class="task__img_delete" src="./remove.svg" alt="Delete button icon"></button>
+            <button class="task__btn task__btn_delete">
+              <img class="task__img_delete" src="./remove.svg" alt="Delete button icon">
+            </button>
           </li>
           <li class="task__item task__item_edit-mode">
             <input class="task__check" type="checkbox">
@@ -54,7 +56,9 @@
               class="task__content"
             >
             <button class="task__btn task__btn_edit">Save</button>
-            <button class="task__btn task__btn_delete"><img class="task__img_delete" src="./remove.svg" alt="Delete button icon"></button>
+            <button class="task__btn task__btn_delete">
+              <img class="task__img_delete" src="./remove.svg" alt="Delete button icon">
+            </button>
           </li>
         </ul>
       </section>
@@ -73,7 +77,9 @@
               class="task__content"
             >
             <button class="task__btn task__btn_edit">Edit</button>
-            <button class="task__btn task__btn_delete"><img class="task__img_delete" src="./remove.svg" alt="Delete button icon"></button>
+            <button class="task__btn task__btn_delete">
+              <img class="task__img_delete" src="./remove.svg" alt="Delete button icon">
+            </button>
           </li>
         </ul>
       </section>
